# REST-API-Practice

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  openapi.json  pyproject.toml
alembic/: env.py
alembic/versions/: 4814812fb4af_added_orderitem_table.py  6391daa3fa7f_initial_migration.py  67a0922ba237_add_timestamp_fields_to_all_tables.py  752b4dc02d4d_migrate_if_changes_are_there.py  770a08849fe5_add_processing_enum_to_order_class.py  d830f6b3211c_added_orderitem_table.py  ef0d6bd6acfc_remove_stock_from_product_model.py
app/: database.py  models.py  schemas.py  server.py
app/routes/: __init__.py  orders.py  products.py  reviews.py  users.py
app/routes/schemas/: orders.py  products.py  reviews.py  users.py
app/schemas/: user.py
scripts/: generate_openapi.py
